@@ -15,42 +15,26 @@ public class ScoresService {
 //    http://fecbob.pixnet.net/blog/post/38076871-java-%E5%B7%B2%E7%9F%A5%E5%85%A9%E5%80%8B%E5%9C%B0%E9%BB%9E%E7%B6%93%E7%B7%AF%E5%BA%A6%E7%AE%97%E8%B7%9D%E9%9B%A2%EF%BC%88%E9%9D%9E%E5%B8%B8%E7%B2%BE%E7%A2%BA%EF%BC%89
 
     private static final double EARTH_RADIUS = 6378.137;
-//    private static double rad(double d)
-//    {
-//        return d * Math.PI / 180.0;
-//    }
 
 
-    //經度longitude, 緯度latitude
-    //台灣位於東經120度至122度，北緯22度至25度。
-    public double getDistance(double latitude1, double longitude1, double latitude2,
-                              double longitude2) {
 
-        // 纬度
-        double lat1 = Math.toRadians(latitude1);
-        double lat2 = Math.toRadians(latitude2);
-        // 经度
-        double lng1 = Math.toRadians(longitude1);
-        double lng2 = Math.toRadians(longitude2);
-        // 纬度之差
-        double a = lat1 - lat2;
-        // 经度之差
-        double b = lng1 - lng2;
-        // 计算两点距离的公式
-        double s = 2 * Math.asin(Math.sqrt(Math.pow(Math.sin(a / 2), 2) +
-                Math.cos(lat1) * Math.cos(lat2) * Math.pow(Math.sin(b / 2), 2)));
-        // 弧长乘地球半径, 返回单位: 千米
-        s = s * EARTH_RADIUS;
-        return s * 1000;
-
-    }
-
-    public Double getTotalScores(List<Candidate> candidatelist) {
+    public Double getTotalScores(List<Candidate> candidatelist, HashMap<Integer, Integer> weightsSettings) {
         AtomicReference<Double> totalscores = new AtomicReference<>(0.0);
 
         candidatelist.forEach(candidate -> {
             candidate.getTeams().forEach(team -> {
-                totalscores.updateAndGet(v -> new Double((double) (v + team.getScores())));
+                weightsSettings.forEach((scores, weights) -> {
+                    if (team.getScores() == Double.valueOf(scores)) {
+//                        System.out.println("需加權:" + scores + ":" + weights);
+                        totalscores.updateAndGet(v -> new Double((double) (v + (team.getMembers() * team.getScores() * weights))));
+                    } else {
+                        totalscores.updateAndGet(v -> new Double((double) (v + (team.getMembers() * team.getScores()))));
+
+                    }
+
+                });
+
+
             });
         });
 //        System.out.println("總共distance："+totaldistance.get());
@@ -65,9 +49,9 @@ public class ScoresService {
 
         candidatelist.forEach(candidate -> {
             candidate.getTeams().forEach(team -> {
-//                System.out.println(team.getName() + "-" + team.getScores());
-                hashMap.computeIfAbsent((int) Math.round(team.getScores()), v -> v = 1);
                 hashMap.computeIfPresent((int) Math.round(team.getScores()), (k, v) -> v + 1);
+                //  computeIfPresent 要先判斷, 不可對調,  如果沒有, 則起始值為1
+                hashMap.computeIfAbsent((int) Math.round(team.getScores()), v -> v = 1);
             });
         });
 //        System.out.println("scores frequency:"+mapper.writeValueAsString(hashMap));
